Fix background not stretching past overscroll area dba836b9b14a9c0b9ec5628f67324715a7f1bf07

--- a/assets/style.css
+++ b/assets/style.css
@@ -60,6 +60,7 @@ header {
 
 html {
 	background: linear-gradient(#0f172a, #162342);
+	background-attachment: fixed;
 	color: #c3c3c3;
 }
 
